# BanZ_C401_Day05

./: .env  README.md  main.py  pyproject.toml
agent/: agent.py
config/: tool_schema.json
data/: build_clean_data.py  crawl_data.py  crawl_specs_from_raw.py
data/raw/: total.json  total.md
data/raw/vinfast/: manifest.json  vinfast_ec_van_2026.json  vinfast_fadil_2026.json  vinfast_herio_green_2026.json  vinfast_limo_green_2026.json  vinfast_lux_a2_0_2026.json  vinfast_lux_sa2_0_2026.json  vinfast_nerio_green_2026.json  vinfast_president_2026.json  vinfast_vf_3_2026.json  vinfast_vf_5_2026.json  vinfast_vf_5_2026__2.json  vinfast_vf_6_2026.json  vinfast_vf_7_2026.json  vinfast_vf_8_2026.json  vinfast_vf_8_2026__2.json  vinfast_vf_9_2026.json  vinfast_vf_e34_2026.json  vinfast_vf_mpv_7_2026.json
data/raw/vinfast_clean/: all_cars.json  manifest.json  vinfast_ec_van_2026.json  vinfast_fadil_2026.json  vinfast_herio_green_2026.json  vinfast_limo_green_2026.json  vinfast_lux_a2_0_2026.json  vinfast_lux_sa2_0_2026.json  vinfast_nerio_green_2026.json  vinfast_president_2026.json  vinfast_vf_3_2026.json  vinfast_vf_5_2026.json  vinfast_vf_6_2026.json  vinfast_vf_7_2026.json  vinfast_vf_8_2026.json  vinfast_vf_8_2026__2.json  vinfast_vf_9_2026.json  vinfast_vf_e34_2026.json  vinfast_vf_mpv_7_2026.json
data/raw/vinfast_specs/: manifest.json  vinfast_ec_van_2026.json  vinfast_fadil_2026.json  vinfast_herio_green_2026.json  vinfast_limo_green_2026.json  vinfast_lux_a2_0_2026.json  vinfast_lux_sa2_0_2026.json  (+12 more)
nhomZ-C401/: canvas.md  spec_draft.md
tools/: search_tools.py
